@@ -1,14 +1,20 @@
 package com.kodilla.price.scheduler;
 
 import com.kodilla.price.entity.AmazonOffer;
+import com.kodilla.price.entity.User;
 import com.kodilla.price.mailer.Mailer;
 import com.kodilla.price.repository.AmazonDao;
 import com.kodilla.price.service.AmazonService;
 import lombok.RequiredArgsConstructor;
+import org.javamoney.moneta.FastMoney;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 
+import javax.money.CurrencyUnit;
+import javax.money.MonetaryAmount;
 import java.math.BigDecimal;
 import java.util.HashMap;
 import java.util.List;
@@ -24,29 +30,42 @@ public class AmazonScheduler {
 
     private final CheckPrices checkPrices;
     private final Mailer mailer;
+    private final Logger logger  = LoggerFactory.getLogger(AmazonScheduler.class);
 
     @Scheduled(fixedRate = 3600000)
     public void checkAmazonPromotions() throws Exception {
         List<AmazonOffer> allOffersWithSubscriptions = amazonDao.getAll();
-        System.out.println(allOffersWithSubscriptions.get(1).getAsin());
+        logger.debug(allOffersWithSubscriptions.get(1).getAsin());
         List<AmazonOffer> changedOffers = allOffersWithSubscriptions.stream()
-                .filter(a ->
-                        {
-                            try {
-                                return a.getCurrentPrice().compareTo(amazonService.getOffer(a.getAsin()).getCurrentPrice()) <0;
-                            } catch (Exception e) {
-                                throw new RuntimeException(e);
-                            }
-                        }
-                )
+                .filter(this::currentPriceIsLower)
                 .collect(Collectors.toList());
-        System.out.println(changedOffers.size());
-        if (changedOffers.size() > 0) {
-            checkTargetPrice(changedOffers);
+        logger.debug("Changed offers size: {}", changedOffers.size());
+        if (!changedOffers.isEmpty()) {
+            checkSubscribedPrices(changedOffers);
         }
     }
 
-    //public Map<Long, Long> findUser
+    private boolean currentPriceIsLower(AmazonOffer offer) {
+        try {
+            BigDecimal currentPrice = amazonService.getOffer(offer.getAsin()).getCurrentPrice();
+            return isLower(offer.getCurrentPrice(), currentPrice);
+        } catch (Exception e) {
+            logger.warn("Problem loading offer: ", e);
+            return false;
+        }
+    }
+
+    private boolean isLower(BigDecimal original, BigDecimal current){
+        return original.compareTo(current) < 0;
+    }
+
+    public Map<AmazonOffer, List<User>> findUserAndOffer(List<AmazonOffer> discountedOffers){
+        Map<AmazonOffer, List<User>> offersForUsers = new HashMap<>();
+        for(AmazonOffer amazonOffer:discountedOffers){
+            offersForUsers.put(amazonOffer, amazonOffer.getUserEntityList());
+        }
+        return  offersForUsers;
+    }
 
     public Map<String, BigDecimal> getActualCurrencies(List<AmazonOffer> changedOffers) throws Exception {
         checkPrices.addCurrency();
@@ -54,31 +73,36 @@ public class AmazonScheduler {
         Map<String, BigDecimal> currencyExchange = new HashMap<>();
         List<String> currencySymbols = changedOffers.stream()
                 .map(AmazonOffer::getCurrencySymbol)
-                .distinct().toList();
+                .distinct()
+                .collect(Collectors.toList());
 
         for (int i = 0; i < currencySymbols.size(); i++) {
-            System.out.println(currencySymbols.get(i));
-            System.out.println(currencies.get(currencySymbols.get(i)));
-            System.out.println(checkPrices.updateCurrencies(currencies.get(currencySymbols.get(i))));
+            logger.debug("Currency Exchange for offer {}", changedOffers.get(i).getAsin());
             currencyExchange.put(currencySymbols.get(i), checkPrices.updateCurrencies(currencies.get(currencySymbols.get(i))));
         }
-        System.out.println(currencyExchange);
         return currencyExchange;
     }
 
-    public void checkTargetPrice(List<AmazonOffer> changedOffers) throws Exception {
+    public void checkSubscribedPrices(List<AmazonOffer> changedOffers) throws Exception {
 
         Map<String, BigDecimal> currencyExchange = getActualCurrencies(changedOffers);
 
+
         List<AmazonOffer> discountedOffers = changedOffers.stream()
                 .filter(a -> a.getCurrentPrice().multiply(currencyExchange.get(a.getCurrencySymbol())).compareTo(a.getTargetPrice()) < 0)
-                .toList();
+                .collect(Collectors.toList());
+        Map<AmazonOffer,List<User>> offersForUsers = findUserAndOffer(discountedOffers);
 
-        if (discountedOffers.size() > 0) {
-            mailer.sendAlert(discountedOffers);
+        if (!discountedOffers.isEmpty()) {
+            mailer.sendAlert(discountedOffers, offersForUsers);
         }
 
 
+    }
+
+    private static MonetaryAmount toTargetCurrency(Map<String,BigDecimal> currencyExchange, AmazonOffer offerInOriginalCurrency, CurrencyUnit targetCurrency){
+        BigDecimal amount = offerInOriginalCurrency.getCurrentPrice().multiply(currencyExchange.get(targetCurrency.getCurrencyCode()));
+        return FastMoney.of(amount, targetCurrency);
     }
 
 
